--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,183 @@
 {
-  "hello_name": "Languages",
-  "welcome": "Chose language"
+  "warm_welcome": "Warm Welcome",
+  "we_hope_you_have_a_sweet_time_here": "We hope you have a sweet time here",
+  "log_in_with_google": "Log in with Google",
+  "log_in_with_facebook": "Log in with Facebook",
+  "log_in_with_phone_number": "Log in with Phone number",
+  "trouble_logging_in?": "Trouble logging in?",
+  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "By clicking 'Login', you agree with our Terms. Learn how we process your data in our",
+  "privacy_policy": "Privacy policy",
+  "and": "and",
+  "cookies_policy": "Cookies Policy",
+  "my_number_is": "My number is",
+  "phone_number": "Phone number",
+  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "When you tap 'Continue', HeartLink will send a text with verification code. Message and data rates mate apply.",
+  "the_verified_phone_number_can_be_used_to_log_in.": "The verified phone number can be used to log in.",
+  "learn_what_happens_when_your_number_changes": "Learn what happens when your number changes",
+  "continue": "Continue",
+  "my_code_is": "My code is",
+  "please_enter_code_sent_to": "Please enter Code sent to",
+  "resend_code": "Resend code",
+  "invalid_code._please_try_again": "Invalid code. please try again",
+  "what's_your_email?": "What's your email?",
+  "don't_lose_access_to_your_account,_verify_your_email": "Don't lose access to your account, verify your email",
+  "verify_instantly_by_connecting_your_google_account": "Verify instantly by connecting your Google account",
+  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "I want to receive news, updates and offers from HeartLink",
+  "enter_email": "Enter email",
+  "welcome_to_heartlink": "Welcome to HeartLink",
+  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Please follow our rules to have more fun and build a great community together",
+  "be_yourself": "Be Yourself",
+  "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Make sure your photos, age and bio true to who you are",
+  "stay_safe": "Stay Safe",
+  "don't_be_too_quick_to_give_out_personal_information.": "Don't be too quick to give out personal information.",
+  "date_safety_guidelines": "Date Safety guidelines",
+  "play_it_cool": "Play It Cool",
+  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Respect others and treat them as you would like to be treated",
+  "be_proactive": "Be Proactive",
+  "always_report_bad_behavior": "Always report bad behavior",
+  "i_agree": "I agree",
+  "my_name_is": "My name is",
+  "your_name": "Your name",
+  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "This is how it will appear in HeartLink, and you will not able to change it",
+  "my_birthday_is": "My birthday is",
+  "your_age_will_be_public": "Your age will be public",
+  "i_am_a": "I am a",
+  "show_my_gender_on_my_profile": "Show my gender on my profile",
+  "my_sexual_orientation_is": "My Sexual orientation is",
+  "select_up_to_3": "Select up to 3",
+  "skip": "Skip",
+  "my_interests_are": "My interests are",
+  "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Let everyone know what you're passionate about, by adding it to your profile",
+  "show_me_gender": "Show me gender",
+  "my_photos_are": "My Photos are",
+  "add_at_least_2_photos_to_continue": "Add at least 2 photos to continue",
+  "enable_location": "Enable Location",
+  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "You will need to enable your location order to use HeartLinks",
+  "allow_location": "Allow Location",
+  "tell_me_more": "Tell me more",
+  "meet_people_nearby": "MEET PEOPLE NEARBY",
+  "you_location_will_be_used_to_show_potential_matches_near_you.": "You location will be used to show potential matches near you.",
+  "want_to_avoid_someone_you_know_on_heartlink?": "Want to avoid someone you know on HeartLink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "It is easy - share your device's contact with HeartLink when using this feature to pick who you want to avoid",
+  "we'll_store_your_locked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_information_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "We'll store your locked contact to stop you from seeing each other if your contact has an account with the same information you provide. You can stop sharing with us in your settings.",
+  "learn_more_here,_including_how_heartlink_process_your_contacts": "Learn more here, including how HeartLink process your contacts",
+  "share_huy_nguyen_profile": "Share Huy Nguyen profile",
+  "report_huy_nguyen": "Report Huy Nguyen",
+  "away": "away",
+  "what_is_the_reason_for_your_report?": "What is the reason for your report?",
+  "please_choose_1_reason": "Please choose 1 reason",
+  "we_won't_let_puddink_know_that_you_reported_them": "We won't let PudDink know that you reported them",
+  "can_you_tell_us_what_happened?": "Can you tell us what happened?",
+  "would_you_mind_sharing_more_details_with_us?": "Would you mind sharing more details with us?",
+  "add_a_comment": "Add a comment",
+  "are_you_sure_about_the_content_of_this_report?": "Are you sure about the content of this report?",
+  "are_you_sure?": "Are you sure?",
+  "cancel": "Cancel",
+  "apply": "Apply",
+  "let's_find_people_same_with_your_vibe...": "Let's find people same with your vibe...",
+  "join_now": "Join now",
+  "no_thanks": "NO THANKS",
+  "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Upgrade to Gold to see people who are interested in you",
+  "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "No one likes you yet. Done't worry, make sure you complete your profile to other find you faster",
+  "see_who_likes_you": "SEE WHO LIKES YOU",
+  "recommendations": "Recommendations",
+  "new_connections": "New Connections",
+  "messages": "Messages",
+  "get_read_receipts": "Get Read Receipts",
+  "level_up_everyone_action_you_take_on_heartlink": "Level up everyone action you take on HeartLink",
+  "get_boost_profile": "Get Boost Profile",
+  "get_supper_like": "Get Supper Like",
+  "silver_package": "Silver package",
+  "gold_package": "Gold package",
+  "settings": "SETTINGS",
+  "edit_profile": "Edit Profile",
+  "safety": "SAFETY",
+  "complete": "complete",
+  "global": "Global",
+  "you_can_meet_people_nearby_and_from_around_the_world": "You can meet people nearby and from around the world",
+  "preferred_languages": "Preferred languages",
+  "no_data": "No data",
+  "add_language": "Add language",
+  "maximum_distance": "Maximum distance",
+  "only_show_people_in_this_range": "Only show people in this range",
+  "age_range": "Age range",
+  "show_me": "Show me",
+  "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "We use these preferences to find matches. Some match suggestions may not fall within your desired parameters",
+  "control_who_you_see": "CONTROL WHO YOU SEE",
+  "sliver_package": "Sliver package",
+  "balance_recommendations": "Balance recommendations",
+  "see_the_most_relevant_people_to_you_(default_settings)": "See the most relevant people to you (default settings)",
+  "recently_active": "Recently Active",
+  "see_the_most_recently_active_people_first": "See the most recently active people first",
+  "standard": "Standard",
+  "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Only be shown to certain types of people for individual recommendations",
+  "only_people_i've_liked": "Only people I've liked",
+  "only_people_you_have_liked_will_see_me": "Only people you have liked will see me",
+  "only_wi-fi_only": "Only Wi-fi Only",
+  "on_wi-fi_and_mobile_data": "On Wi-fi and mobile data",
+  "never_auto_play_videos": "Never auto play videos",
+  "show_me_top_picks": "Show me Top picks",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Turning this on will allow you to be shown as a featured Top Pick to other users near you",
+  "activity_status": "Activity Status",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Allow other members to see if you were recently active within the last 24h on HeartLink. If you have turned this off, they will not be able to see your recently active status",
+  "app_settings": "App Settings",
+  "show_distance_in": "SHOW DISTANCE IN",
+  "language": "Language",
+  "chose_the_language_you_want_to_display": "Chose the language you want to display",
+  "dark_theme": "Dark theme",
+  "choose_the_theme_you_like_most": "Choose the theme you like most",
+  "log_out": "LOG OUT",
+  "delete_account": "DELETE ACCOUNT",
+  "add_video,_pic_or_logo_target_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Add video, pic or logo target 4% closer to completing your profile and you may even get more likes",
+  "add_media": "Add Media",
+  "upload_photo": "Upload Photo",
+  "upload_loop": "Upload Loop",
+  "capture_from_camera": "Capture from Camera",
+  "photo": "Photo",
+  "done": "Done",
+  "about_me": "ABOUT ME",
+  "about_me_-_maximize_500_words": "About me - maximize 500 words",
+  "interest": "INTEREST",
+  "5_out_of_5": "5 out of 5",
+  "search_interest": "Search interest",
+  "dating_purposes": "DATING PURPOSES",
+  "i'm_looking_for": "I'm looking for",
+  "empty": "empty",
+  "now_i'm_looking_for...": "Now I'm looking for...",
+  "share_the_purpose_to_find_'that_person'": "Share the purpose to find 'that person'",
+  "i_know_languages": "I KNOW LANGUAGES",
+  "the_language_i_know": "The language I know",
+  "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Choose up to 5 languages you know and add to your profile",
+  "basic_information": "BASIC INFORMATION",
+  "zodiac": "Zodiac",
+  "future_family": "Future family",
+  "education": "Education",
+  "vaccine_for_covid": "Vaccine for COVID",
+  "personality_type": "Personality Type",
+  "communication_style": "Communication Style",
+  "love_languages": "Love Languages",
+  "life_style": "LIFE STYLE",
+  "pets_free": "Pets free",
+  "drink_beer": "Drink beer",
+  "are_you_a_smoker": "Are you a smoker",
+  "practice": "Practice",
+  "diet": "Diet",
+  "social_media": "Social media",
+  "sleeping_habits": "Sleeping habits",
+  "job_title": "JOB TITLE",
+  "add_job_title": "Add job title",
+  "company": "COMPANY",
+  "school": "SCHOOL",
+  "add_school": "Add school",
+  "living_in": "LIVING IN",
+  "show_instagram_photos": "SHOW INSTAGRAM PHOTOS",
+  "connect_instagram": "Connect Instagram",
+  "my_anthem": "MY ANTHEM",
+  "my_top_spotify_artists": "MY TOP SPOTIFY ARTISTS",
+  "connect_spotify": "Connect Spotify",
+  "gender": "GENDER",
+  "sexual_orientation": "SEXUAL ORIENTATION",
+  "control_profile": "CONTROL PROFILE",
+  "don't_show_my_age": "Don't show my age",
+  "don't_show_my_distance": "Don't show my distance"
 }
