--- a/src/locales/vn.json
+++ b/src/locales/vn.json
@@ -1,4 +1,184 @@
 {
-  "hello_name": "Ngôn ngữ",
-  "welcome": "Chọn ngôn ngữ"
+  "warm_welcome": "Chào đón nồng nhiệt",
+  "we_hope_you_have_a_sweet_time_here": "Chúng tôi hy vọng bạn có một thời gian ngọt ngào ở đây",
+  "log_in_with_google": "Đăng nhập bằng Google",
+  "log_in_with_facebook": "Đăng nhập Facebook",
+  "log_in_with_phone_number": "Đăng nhập bằng số điện thoại",
+  "trouble_logging_in?": "Rắc rối đăng nhập?",
+  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Bằng cách nhấp vào 'Đăng nhập', bạn đồng ý với các điều khoản của chúng tôi. Tìm hiểu cách chúng tôi xử lý dữ liệu của bạn trong",
+  "privacy_policy": "Chính sách bảo mật",
+  "and": "Và",
+  "cookies_policy": "Chính sách cookie",
+  "my_number_is": "Số của tôi là",
+  "phone_number": "Số điện thoại",
+  "when_you_tap_'continue',_heartlink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Khi bạn nhấn 'Tiếp tục', HeartLink sẽ gửi một văn bản với mã xác minh. Thông điệp và tốc độ dữ liệu áp dụng.",
+  "the_verified_phone_number_can_be_used_to_log_in.": "Số điện thoại được xác minh có thể được sử dụng để đăng nhập.",
+  "learn_what_happens_when_your_number_changes": "Tìm hiểu những gì xảy ra khi số của bạn thay đổi",
+  "continue": "Tiếp tục",
+  "my_code_is": "Mã của tôi là",
+  "please_enter_code_sent_to": "Vui lòng nhập mã được gửi đến",
+  "resend_code": "Mã gửi lại",
+  "invalid_code._please_try_again": "Mã không hợp lệ. vui lòng thử lại",
+  "what's_your_email?": "Email của bạn là gì?",
+  "don't_lose_access_to_your_account,_verify_your_email": "Đừng mất quyền truy cập vào tài khoản của bạn, xác minh email của bạn",
+  "verify_instantly_by_connecting_your_google_account": "Xác minh ngay lập tức bằng cách kết nối tài khoản Google của bạn",
+  "i_want_to_receive_news,_updates_and_offers_from_heartlink": "Tôi muốn nhận tin tức, cập nhật và cung cấp từ HeartLink",
+  "enter_email": "Nhập email",
+  "welcome_to_heartlink": "Chào mừng bạn đến với Heartlink",
+  "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Hãy làm theo các quy tắc của chúng tôi để có nhiều niềm vui hơn và cùng nhau xây dựng một cộng đồng tuyệt vời",
+  "be_yourself": "Là chính mình",
+  "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Hãy chắc chắn rằng ảnh, tuổi và tiểu sử của bạn đúng với con người bạn",
+  "stay_safe": "Giữ an toàn",
+  "don't_be_too_quick_to_give_out_personal_information.": "Đừng quá nhanh để cung cấp thông tin cá nhân.",
+  "date_safety_guidelines": "Hướng dẫn an toàn ngày",
+  "play_it_cool": "Tỏ ra ngầu",
+  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Tôn trọng người khác và đối xử với họ như bạn muốn được đối xử",
+  "be_proactive": "Được chủ động",
+  "always_report_bad_behavior": "Luôn báo cáo hành vi xấu",
+  "i_agree": "tôi đồng ý",
+  "my_name_is": "Tên tôi là",
+  "your_name": "Tên của bạn",
+  "this_is_how_it_will_appear_in_heartlink,_and_you_will_not_able_to_change_it": "Đây là cách nó sẽ xuất hiện trong Heartlink và bạn sẽ không thể thay đổi nó",
+  "my_birthday_is": "Ngày sinh nhật tôi là",
+  "your_age_will_be_public": "Tuổi của bạn sẽ được công khai",
+  "i_am_a": "tôi là",
+  "show_my_gender_on_my_profile": "Hiển thị giới tính của tôi trên hồ sơ của tôi",
+  "my_sexual_orientation_is": "Xu hướng tình dục của tôi là",
+  "select_up_to_3": "Chọn tối đa 3",
+  "skip": "Nhảy",
+  "my_interests_are": "Sở thích của tôi là",
+  "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Cho mọi người biết bạn đam mê điều gì, bằng cách thêm nó vào hồ sơ của bạn",
+  "show_me_gender": "Cho tôi thấy giới tính",
+  "my_photos_are": "Ảnh của tôi là",
+  "add_at_least_2_photos_to_continue": "Thêm ít nhất 2 ảnh để tiếp tục",
+  "enable_location": "Cho phép vị trí",
+  "you_will_need_to_enable_your_location_order_to_use_heartlinks": "Bạn sẽ cần kích hoạt thứ tự vị trí của mình để sử dụng HeartLinks",
+  "allow_location": "Cho phép vị trí",
+  "tell_me_more": "Nói cho tôi biết thêm",
+  "meet_people_nearby": "Gặp gỡ những người gần đó",
+  "you_location_will_be_used_to_show_potential_matches_near_you.": "Vị trí của bạn sẽ được sử dụng để hiển thị các trận đấu tiềm năng gần bạn.",
+  "want_to_avoid_someone_you_know_on_heartlink?": "Bạn muốn tránh một người mà bạn biết trên Heartlink?",
+  "it_is_easy_-_share_your_device's_contact_with_heartlink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Thật dễ dàng - Chia sẻ liên hệ của thiết bị với Heartlink khi sử dụng tính năng này để chọn người bạn muốn tránh",
+  "we'll_store_your_locked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_information_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Chúng tôi sẽ lưu trữ liên hệ bị khóa của bạn để ngăn bạn nhìn thấy nhau nếu liên hệ của bạn có tài khoản có cùng thông tin bạn cung cấp. Bạn có thể ngừng chia sẻ với chúng tôi trong cài đặt của bạn.",
+  "learn_more_here,_including_how_heartlink_process_your_contacts": "Tìm hiểu thêm ở đây, bao gồm cả cách thức xử lý trái tim của các liên hệ của bạn",
+  "share_huy_nguyen_profile": "Chia sẻ hồ sơ Huy Nguyen",
+  "report_huy_nguyen": "Báo cáo Huy Nguyen",
+  "away": "xa",
+  "what_is_the_reason_for_your_report?": "Lý do cho báo cáo của bạn là gì?",
+  "please_choose_1_reason": "Vui lòng chọn 1 lý do",
+  "we_won't_let_puddink_know_that_you_reported_them": "Chúng tôi sẽ không để Puddink biết rằng bạn đã báo cáo chúng",
+  "can_you_tell_us_what_happened?": "Bạn có thể cho chúng tôi biết những gì đã xảy ra?",
+  "would_you_mind_sharing_more_details_with_us?": "Bạn có phiền chia sẻ thêm chi tiết với chúng tôi không?",
+  "add_a_comment": "Thêm một bình luận",
+  "are_you_sure_about_the_content_of_this_report?": "Bạn có chắc chắn về nội dung của báo cáo này?",
+  "are_you_sure?": "Bạn có chắc không?",
+  "cancel": "Hủy bỏ",
+  "apply": "Áp dụng",
+  "let's_find_people_same_with_your_vibe...": "Hãy tìm mọi người giống với sự rung cảm của bạn ...",
+  "join_now": "Tham gia ngay",
+  "no_thanks": "KHÔNG, CÁM ƠN",
+  "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Nâng cấp lên vàng để xem những người quan tâm đến bạn",
+  "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "Chưa ai thích bạn. Đừng lo lắng, hãy chắc chắn rằng bạn hoàn thành hồ sơ của mình để tìm bạn nhanh hơn",
+  "see_who_likes_you": "Xem ai thích bạn",
+  "recommendations": "khuyến nghị",
+  "new_connections": "Kết nối mới",
+  "messages": "Tin nhắn",
+  "get_read_receipts": "Nhận biên lai đọc",
+  "level_up_everyone_action_you_take_on_heartlink": "Cấp độ cho mọi người hành động bạn đảm nhận trên trái tim",
+  "get_boost_profile": "Nhận hồ sơ tăng cường",
+  "get_supper_like": "Nhận bữa ăn tối như",
+  "silver_package": "Gói bạc",
+  "gold_package": "Gói vàng",
+  "settings": "Cài đặt",
+  "edit_profile": "Chỉnh sửa hồ sơ",
+  "safety": "SỰ AN TOÀN",
+  "complete": "hoàn thành",
+  "global": "Toàn cầu",
+  "you_can_meet_people_nearby_and_from_around_the_world": "Bạn có thể gặp những người gần đó và từ khắp nơi trên thế giới",
+  "preferred_languages": "Ngôn ngữ ưa thích",
+  "no_data": "Không có dữ liệu",
+  "add_language": "Thêm ngôn ngữ",
+  "maximum_distance": "Khoảng cách tối đa",
+  "only_show_people_in_this_range": "Chỉ hiển thị mọi người trong phạm vi này",
+  "age_range": "Độ tuổi",
+  "show_me": "Cho tôi xem",
+  "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Chúng tôi sử dụng các tùy chọn này để tìm các trận đấu. Một số đề xuất phù hợp có thể không nằm trong các tham số mong muốn của bạn",
+  "control_who_you_see": "Kiểm soát người bạn nhìn thấy",
+  "sliver_package": "Gói sliver",
+  "balance_recommendations": "Khuyến nghị cân bằng",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Xem những người phù hợp nhất với bạn (cài đặt mặc định)",
+  "recently_active": "Mới hoạt động",
+  "see_the_most_recently_active_people_first": "Xem những người hoạt động gần đây nhất đầu tiên",
+  "standard": "Tiêu chuẩn",
+  "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Chỉ được hiển thị cho một số loại người cho các khuyến nghị riêng lẻ",
+  "only_people_i've_liked": "Chỉ những người tôi thích",
+  "only_people_you_have_liked_will_see_me": "Chỉ những người bạn đã thích mới gặp tôi",
+  "only_wi-fi_only": "Chỉ Wi-Fi chỉ",
+  "on_wi-fi_and_mobile_data": "Trên Wi-Fi và dữ liệu di động",
+  "never_auto_play_videos": "Không bao giờ tự động phát video",
+  "show_me_top_picks": "Cho tôi xem những lựa chọn hàng đầu",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Bật này sẽ cho phép bạn được hiển thị như một lựa chọn hàng đầu đặc trưng cho những người dùng khác gần bạn",
+  "activity_status": "Trạng thái hoạt động",
+  "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartlink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Cho phép các thành viên khác xem gần đây bạn đã hoạt động trong 24 giờ cuối cùng trên Heartlink. Nếu bạn đã tắt điều này, họ sẽ không thể thấy trạng thái hoạt động gần đây của bạn",
+  "app_settings": "Cài đặt ứng dụng",
+  "show_distance_in": "Hiển thị khoảng cách trong",
+  "language": "Ngôn ngữ",
+  "chose_the_language_you_want_to_display": "Chọn ngôn ngữ bạn muốn hiển thị",
+  "dark_theme": "Chủ đề tối",
+  "choose_the_theme_you_like_most": "Chọn chủ đề bạn thích nhất",
+  "log_out": "ĐĂNG XUẤT",
+  "delete_account": "XÓA TÀI KHOẢN",
+  "add_video,_pic_or_logo_target_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Thêm video, pic hoặc logo mục tiêu 4% gần hơn để hoàn thành hồ sơ của bạn và bạn thậm chí có thể nhận được nhiều lượt thích hơn",
+  "add_media": "Thêm phương tiện truyền thông",
+  "upload_photo": "Tải ảnh lên",
+  "upload_loop": "Tải lên vòng lặp",
+  "capture_from_camera": "Chụp từ máy ảnh",
+  "photo": "hình chụp",
+  "done": "Xong",
+  "about_me": "VỀ TÔI",
+  "about_me_-_maximize_500_words": "Về tôi - tối đa hóa 500 từ",
+  "interest": "QUAN TÂM",
+  "5_out_of_5": "5 trên 5",
+  "search_interest": "Tìm kiếm lãi",
+  "dating_purposes": "Mục đích hẹn hò",
+  "i'm_looking_for": "Tôi đang tìm kiếm",
+  "empty": "trống",
+  "now_i'm_looking_for...": "Bây giờ tôi đang tìm kiếm ...",
+  "share_the_purpose_to_find_'that_person'": "Chia sẻ mục đích để tìm 'người đó'",
+  "i_know_languages": "Tôi biết ngôn ngữ",
+  "the_language_i_know": "Ngôn ngữ tôi biết",
+  "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Chọn tối đa 5 ngôn ngữ bạn biết và thêm vào hồ sơ của bạn",
+  "basic_information": "THÔNG TIN CƠ BẢN",
+  "zodiac": "Zodiac",
+  "future_family": "Gia đình tương lai",
+  "education": "Giáo dục",
+  "vaccine_for_covid": "Vắc -xin cho covid",
+  "personality_type": "Kiểu nhân cách",
+  "communication_style": "Phong cách giao tiếp",
+  "love_languages": "Ngôn ngữ tình yêu",
+  "life_style": "CÁCH SỐNG",
+  "pets_free": "Vật nuôi miễn phí",
+  "drink_beer": "Uống bia",
+  "are_you_a_smoker": "Bạn có phải là người nghiện thuốc lá",
+  "practice": "Luyện tập",
+  "diet": "Ăn kiêng",
+  "social_media": "Truyền thông xã hội",
+  "sleeping_habits": "Thói quen ngủ",
+  "job_title": "Tiêu đề công việc",
+  "add_job_title": "Thêm tiêu đề công việc",
+  "company": "CÔNG TY",
+  "school": "TRƯỜNG HỌC",
+  "add_school": "Thêm trường học",
+  "living_in": "SỐNG Ở",
+  "show_instagram_photos": "Hiển thị ảnh Instagram",
+  "connect_instagram": "Kết nối Instagram",
+  "my_anthem": "QUỐC CA CỦA TÔI",
+  "my_top_spotify_artists": "Các nghệ sĩ Spotify hàng đầu của tôi",
+  "connect_spotify": "Kết nối Spotify",
+  "gender": "GIỚI TÍNH",
+  "sexual_orientation": "Xu hướng tình dục",
+  "control_profile": "Hồ sơ kiểm soát",
+  "don't_show_my_age": "Đừng thể hiện tuổi tác của tôi",
+  "don't_show_my_distance": "Đừng hiển thị khoảng cách của tôi",
+  "undefined": "Bài kiểm tra"
 }
