--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -90,14 +90,14 @@
   "silver_package": "Silver package",
   "gold_package": "Gold package",
   "settings": "SETTINGS",
-  "edit_profile": "Edit Profile",
+  "edit_profile": "EDIT PROFILE",
   "safety": "SAFETY",
   "complete": "complete",
   "global": "Global",
   "you_can_meet_people_nearby_and_from_around_the_world": "You can meet people nearby and from around the world",
   "preferred_languages": "Preferred languages",
   "no_data": "No data",
-  "add_language": "Add language",
+  "add_language": "Add language...",
   "maximum_distance": "Maximum distance",
   "only_show_people_in_this_range": "Only show people in this range",
   "age_range": "Age range",
@@ -138,7 +138,7 @@
   "about_me": "ABOUT ME",
   "about_me_-_maximize_500_words": "About me - maximize 500 words",
   "interest": "INTEREST",
-  "5_out_of_5": "5 out of 5",
+  "5_out_of_5": "out of 5",
   "search_interest": "Search interest",
   "dating_purposes": "DATING PURPOSES",
   "i'm_looking_for": "I'm looking for",
@@ -147,6 +147,7 @@
   "share_the_purpose_to_find_'that_person'": "Share the purpose to find 'that person'",
   "i_know_languages": "I KNOW LANGUAGES",
   "the_language_i_know": "The language I know",
+  "search_language":"Search language",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Choose up to 5 languages you know and add to your profile",
   "basic_information": "BASIC INFORMATION",
   "zodiac": "Zodiac",
@@ -166,13 +167,16 @@
   "sleeping_habits": "Sleeping habits",
   "job_title": "JOB TITLE",
   "add_job_title": "Add job title",
+  "add_company": "Add company",
   "company": "COMPANY",
   "school": "SCHOOL",
   "add_school": "Add school",
   "living_in": "LIVING IN",
+  "add_living": "Add city",
   "show_instagram_photos": "SHOW INSTAGRAM PHOTOS",
   "connect_instagram": "Connect Instagram",
   "my_anthem": "MY ANTHEM",
+  "connect_anthem": "Choose an Anthem",
   "my_top_spotify_artists": "MY TOP SPOTIFY ARTISTS",
   "connect_spotify": "Connect Spotify",
   "gender": "GENDER",
