--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -83,6 +83,7 @@
   "recommendations": "Recommendations",
   "new_connections": "New Connections",
   "messages": "Messages",
+  "platinum_package": "Platinum package",
   "get_read_receipts": "Get Read Receipts",
   "level_up_everyone_action_you_take_on_heartlink": "Level up everyone action you take on HeartLink",
   "get_boost_profile": "Get Boost Profile",
@@ -147,7 +148,7 @@
   "share_the_purpose_to_find_'that_person'": "Share the purpose to find 'that person'",
   "i_know_languages": "I KNOW LANGUAGES",
   "the_language_i_know": "The language I know",
-  "search_language":"Search language",
+  "search_language": "Search language",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Choose up to 5 languages you know and add to your profile",
   "basic_information": "BASIC INFORMATION",
   "zodiac": "Zodiac",
